# SpannerPaxos

./: .gitignore  Cargo.toml  README.md
spx_app/: Cargo.toml  build.rs
spx_app/proto/services/: follower_service.proto
spx_app/src/: main.rs
spx_app/src/commands/: mod.rs  replicate_write.rs
spx_app/src/configs/: follower_config.rs  mod.rs
spx_app/src/handles/: mod.rs
spx_app/src/handles/follower_handle/: handle.rs  mod.rs  types.rs  util.rs
spx_app/src/handles/follower_handle/util/: mod.rs  replicate_write.rs
spx_app/src/managers/: follower_manager.rs  mod.rs
spx_app/src/managers/follower_manager/: mod.rs  util.rs
spx_app/src/operators/: leader_operator.rs  mod.rs
spx_app/src/payloads/: mod.rs
spx_app/src/services/: leader_service.rs  mod.rs  true_time.rs  wal.rs
spx_client/: Cargo.toml  build.rs
spx_client/proto/services/: follower_service.proto  leader_service.proto
spx_client/src/: lib.rs
spx_core/: Cargo.toml
spx_core/src/: lib.rs
spx_core/src/members/: leader.rs  mod.rs
spx_core/src/operators/: leader_operator.rs
spx_core/src/payloads/: replicate_write.rs
spx_core/src/processors/: mod.rs  replicate_write_processor.rs
spx_core/src/responses/: mod.rs  replicate_write_response.rs
spx_core/src/states/: leader_state.rs  mod.rs
spx_lib/: Cargo.toml
spx_lib/src/: lib.rs  wal.rs
spx_lib/src/task_dispatcher/: dispatcher.rs  mod.rs  types.rs
spx_lib/src/true_time/: mod.rs  utils.rs  (+1 more)
spx_protocol/: Cargo.toml  build.rs
spx_protocol/proto/services/: follower_service.proto  leader_service.proto
spx_protocol/src/: lib.rs
(+5 files in other folders)
