[package]
name = "spx_core"
version = "0.1.0"
edition = "2024"

[dependencies]
spx_lib = { path = "../spx_lib" }
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
tonic = "0.14.5"
dashmap = "6.0"
