[package]
name = "spx_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14"
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
